--- a/QL_BanHang_XML/QL_BanHang_XML.csproj
+++ b/QL_BanHang_XML/QL_BanHang_XML.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Data\DataUtil_HoaDon.cs" />
     <Compile Include="Data\DataUtil_Khachhang.cs" />
     <Compile Include="Data\DataUtil_Sanpham.cs" />
     <Compile Include="Home.cs">
@@ -60,10 +61,17 @@
     <Compile Include="Login.Designer.cs">
       <DependentUpon>Login.cs</DependentUpon>
     </Compile>
+    <Compile Include="model\hoadon.cs" />
     <Compile Include="model\khachhang.cs" />
     <Compile Include="model\sanpham.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QL_Hoa_Don.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="QL_Hoa_Don.Designer.cs">
+      <DependentUpon>QL_Hoa_Don.cs</DependentUpon>
+    </Compile>
     <Compile Include="QL_Khach_Hang.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -92,6 +100,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="QL_Hoa_Don.resx">
+      <DependentUpon>QL_Hoa_Don.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="QL_Khach_Hang.resx">
       <DependentUpon>QL_Khach_Hang.cs</DependentUpon>
     </EmbeddedResource>
